frontend/test/should_fail/computations_no_break_continue_004.grg
rule r()
{	
	modify {		
		eval { 
			break;
		}
	}
}
